* aircrack-ng: Added --ptw-debug to allow klein or ptw disabling
* aircrack-ng: PTW: Starts a new process group
* aircrack-ng: Increased PTW key checking speed by 20%
* aircrack-ng: Try 1000 40bit keys befor starting 104bit cracking, to get the key "instantly" without waiting for 104 bit to fail
* aircrack-ng: Fixed not shown ascii keys, when found key was shorter than expected
* airdecap-ng: Fixed bug in calc_pmk() function causes wrong PMK to be computed
* aireplay-ng: Added usage of RTS/CTS, auth and ACK to --test (more stable and faster)
* aireplay-ng: Added TCP connection test to --test
* aireplay-ng: Changed injection rate to be more stable
* aireplay-ng: Made essid argument optional - sniffs the essid if its broadcasted
* aireplay-ng: Made src mac argument (-h) optional - uses default interface mac
* aireplay-ng: Added bitrate test to --test (-B)
* aireplay-ng: Fixed 100% cpu utilization in --test
* aireplay-ng: Added --fast switch to use first available packet without interaction
* aireplay-ng: chopchop now tries header recreation workaround if icv check failed
* aireplay-ng: Fixed seq field for fragment attack
* aireplay-ng: Now works with rtc_cmos
* aireplay-ng: Added automatic channel changing in --test to AP channel
* aireplay-ng: Added channel synchonisation for --test between cards
* aireplay-ng: Added possibility to limit injection test to one AP "-a" or "-e"
* aireplay-ng: Added BSSID/ESSID detection, so it can be enough to specify one option
* airmon-ng: Added driver detection through sysfs
* airmon-ng: Added mac80211 support
* airmon-ng: Added networkmanager detection - airmon-ng check
* airmon-ng: Fixed interface name detection
* airmon-ng: Fixed Ralink rt73 detection
* airmon-ng: Using real interface name instead of first 7 bytes
* makeivs-ng: Added parameters to set length, number and first IV of generated IVs
* makeivs-ng: Added possibility to generate IVs sequentially or randomly