@@ -94,6 +94,9 @@ Use KoreK attacks instead of PTW.
 .TP
 .I -D
 WEP decloak mode.
+.TP
+.I -V, --visual-inspection
+Give the ability to the user to inspect votes and change specific keybyte value. This option can only be used with KoreK attack.
 .PP
 .TP
 .B WPA-PSK cracking options:
