@@ -61,6 +61,9 @@ __attribute__((regparm(3)));
 
 extern char * getVersion(char * progname, int maj, int min, int submin, int svnrev);
 extern int getmac(char * macAddress, int strict, unsigned char * mac);
+extern int readLine(char line[], int maxlength);
+extern int hexToInt(char s[], int len);
+
 
 #define S_LLC_SNAP      "\xAA\xAA\x03\x00\x00\x00"
 #define S_LLC_SNAP_ARP  (S_LLC_SNAP "\x08\x06")
@@ -146,6 +149,10 @@ struct options
 
 	int wep_decloak;
 	int ptw_attack;
+
+	int visual_inspection;       /* Enabling/disabling visual    */
+                                 /* inspection of the different  */
+                                 /* keybytes                     */
 }
 
 opt;
